--- a/client/src/components/Pages/styles/BookTicket.css
+++ b/client/src/components/Pages/styles/BookTicket.css
@@ -21,6 +21,13 @@ input[type="text"]:not(:placeholder-shown) ~ .input-text{
 
 }
 
+.bg-img{
+  background-image: url('../../../images/pexels-ahmed-muntasir-912050.jpg');
+  background-repeat: no-repeat;
+  height:100vh;
+}
+
+
 
 
 
