--- a/client/src/components/Pages/styles/Tables.css
+++ b/client/src/components/Pages/styles/Tables.css
@@ -72,3 +72,9 @@
 .btn-book{
     background-color: #009879;
 }
+
+.bg-tasweer{
+    background-image: url('../../../images/pexels-ahmed-muntasir-912050.jpg');
+    background-repeat: no-repeat;
+    height:100vh;
+}
